bat.string1.lessons.bat.string1.StringYak.scala.error
stringYak:10: error: reassignment to val
      i=i+2
       ^